--- a/SnowTricks/templates/snowtricks/home.html.twig
+++ b/SnowTricks/templates/snowtricks/home.html.twig
@@ -1,6 +1,7 @@
+{% extends 'base.html.twig' %}
 {% block body %}
 {% for figure in figuresList %}
 <a href="{{ path('figure_show', {'id': figure.id}) }}">{{ figure.name }} </a> : <a href="{{ path('figure_delete', {'id': figure.id}) }}" onclick="return confirm('Voulez-vous vraiment supprimer la figure?')">Supprimer la figure</a> <br>
-
+<a href="{{ path('figure_create') }}">Créer une nouvelle Figure</a>
 {% endfor %}
 {% endblock %}
