add image handling in the new figure form

--- a/SnowTricks/templates/snowtricks/create_figure.html.twig
+++ b/SnowTricks/templates/snowtricks/create_figure.html.twig
@@ -4,5 +4,6 @@
 <h1>Créer une nouvelle figure</h1>
 {{ form_start(formFigure) }}
 {{ form_widget(formFigure) }}
+<button type="submit" class="btn btn-success">Créer</button>
 {{ form_end(formFigure) }}
 {% endblock %}
