--- a/SnowTricks/templates/base.html.twig
+++ b/SnowTricks/templates/base.html.twig
@@ -23,6 +23,16 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('figure_create') }}">Créer Figure</a>
                         </li>
+                        
+                        {% if not app.user %}
+                            <li class="nav-item">
+                                <a href="{{ path('security_login') }}" class="nav-link">Connexion</a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item">
+                                <a href="{{ path('security_logout') }}" class="nav-link">Deconnexion</a>
+                            </li>
+                        {% endif %}
                     </ul>
                 
                 </div>
